Correct padding and text-wrap in main.css
Fix padding property typo and adjust text-wrap.

--- a/main.css
+++ b/main.css
@@ -15,12 +15,12 @@ font-family: Courier, Verdana, monospace;
 max-width: 650px;
 width: 100vw;
 background: #ffffff;
-padding-top: 40px;
-padding-buttom: 15px;
 margin: 0 auto;}
 
-/*左右縮排*/
+/*段落文字們的位置*/
 p {
 max-width: 650px;
 margin: 0 30px;
-text-wrap: wrap}
+text-wrap: wrap
+padding-top: 40px;
+padding-buttom: 15px;}
